--- a/resources/ui/wiibafu.ui
+++ b/resources/ui/wiibafu.ui
@@ -245,6 +245,13 @@
              </property>
             </widget>
            </item>
+           <item>
+            <widget class="QPushButton" name="dvdTab_pushButton_TransferToFileSystem">
+             <property name="text">
+              <string>Transfer to file system</string>
+             </property>
+            </widget>
+           </item>
           </layout>
          </widget>
         </item>
