--- a/resources/ui/wiibafudialog.ui
+++ b/resources/ui/wiibafudialog.ui
@@ -91,7 +91,7 @@
        </widget>
       </item>
       <item row="2" column="0">
-       <widget class="QLabel" name="label_2">
+       <widget class="QLabel" name="label_ImageFormat">
         <property name="locale">
          <locale language="English" country="UnitedStates"/>
         </property>
